<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="14dp"
    tools:context=".P1.P1_Visiting_Card"
    style="@style/my_style"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:src="@drawable/my_logo"
 />

    <TextView
        style="@style/style_Visiting_card"
        android:text="@string/name"
        app:drawableLeftCompat="@drawable/ic_account" />

    <TextView
        style="@style/style_Visiting_card"
        android:text="@string/designation"
        app:drawableLeftCompat="@drawable/ic_work" />
    <TextView
        style="@style/style_Visiting_card"
        android:text="@string/phone_number"
        app:drawableLeftCompat="@drawable/ic_call" />
    <TextView
        style="@style/style_Visiting_card"
        android:text="@string/company"
        app:drawableLeftCompat="@drawable/ic_location" />
    <TextView
        style="@style/style_Visiting_card"
        android:text="@string/email"
        app:drawableLeftCompat="@drawable/ic_email" />
    <TextView
        style="@style/style_Visiting_card"
        android:text="@string/website"
        app:drawableLeftCompat="@drawable/ic_public" />
    <TextView
        style="@style/style_Visiting_card"
        android:text="@string/fax"
        app:drawableLeftCompat="@drawable/ic_print" />



</LinearLayout>